k8s/frontend-deployment.yaml
# Namespace
apiVersion: v1
kind: Namespace
metadata:
  name: jerney
  labels:
    app.kubernetes.io/part-of: jerney

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jerney-frontend
  labels:
    app.kubernetes.io/name: jerney-frontend
    app.kubernetes.io/part-of: jerney
    app.kubernetes.io/component: frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: jerney-frontend
  template:
    metadata:
      labels:
        app.kubernetes.io/name: jerney-frontend
        app.kubernetes.io/part-of: jerney
        app.kubernetes.io/component: frontend
    spec:
      containers:
      - name: frontend
        image: 072583797351.dkr.ecr.ap-south-1.amazonaws.com/nodeapp-frontend:v13
        ports:
        - containerPort: 8080
          protocol: TCP

        resources:
          requests:
            cpu: "50m"
            memory: "64Mi"  
          limits:
            cpu: "200m"
            memory: "128Mi"
        livenessProbe:
          httpGet:
            path: /
            port: 8080
          initialDelaySeconds: 5
          periodSeconds: 10

        readinessProbe:
          httpGet:
            path: /
            port: 8080
          initialDelaySeconds: 3
          periodSeconds: 5

---
apiVersion: v1
kind: Service
metadata:
  name: jerney-frontend
  namespace: jerney
  labels:
    app.kubernetes.io/name: jerney-frontend
    app.kubernetes.io/part-of: jerney
    app.kubernetes.io/component: frontend
spec:
  type: NodePort
  selector:
    app.kubernetes.io/name: jerney-frontend
  ports:
    - protocol: TCP
      port: 80         
      targetPort: 8080
