k8s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jerney-backend
  labels:
    app.kubernetes.io/name: jerney-backend
    app.kubernetes.io/part-of: jerney
    app.kubernetes.io/component: backend
spec:
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: jerney-backend
  template:
    metadata:
      labels:
        app.kubernetes.io/name: jerney-backend
        app.kubernetes.io/part-of: jerney
        app.kubernetes.io/component: backend
    spec:
      containers:
      - name: jerney-backend
        image: 072583797351.dkr.ecr.ap-south-1.amazonaws.com/nodeapp-backend:v27
        ports:
        - containerPort: 5000
          protocol: TCP

        resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 300m
              memory: 256Mi
        livenessProbe:
            httpGet:
              path: /api/health
              port: 5000
            initialDelaySeconds: 10
            periodSeconds: 15
            timeoutSeconds: 5
        readinessProbe:
            httpGet:
              path: /api/health
              port: 5000
            initialDelaySeconds: 5
            periodSeconds: 5
            timeoutSeconds: 3



---
apiVersion: v1
kind: Service
metadata:
  name: jerney-backend
  namespace: jerney
  labels:
    app.kubernetes.io/name: jerney-backend
    app.kubernetes.io/part-of: jerney
    app.kubernetes.io/component: backend
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: jerney-backend
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000



---
# ---- NetworkPolicy: Backend accepts traffic from Frontend only ----
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: jerney-backend-allow-frontend-only
  namespace: jerney
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: jerney-backend
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: jerney-frontend
      ports:
        - port: 5000
          protocol: TCP
