k8s/postgress-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-deployment
  namespace: jerney
  labels:
    app.kubernetes.io/name: jerney-db
    app.kubernetes.io/part-of: jerney
    app.kubernetes.io/component: database
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: jerney-db
  template:
    metadata:
      labels:
        app.kubernetes.io/name: jerney-db
        app.kubernetes.io/part-of: jerney
        app.kubernetes.io/component: database
    spec:
      containers:
      - name: postgres
        image: postgres:16-alpine
        ports:
        - containerPort: 5432
        volumeMounts:
        - name: db-storage
          mountPath: /var/lib/postgresql/data
          subPath: pgdata

        livenessProbe:
          exec:
            command: ["pg_isready","-U","jerney_user","-d","jerney_db"]
          initialDelaySeconds: 15
          periodSeconds: 5

        readinessProbe:
          exec:
            command: ["pg_isready","-U","jerney_user","-d","jerney_db"]
          initialDelaySeconds: 5
          periodSeconds: 5
          timeoutSeconds: 3

        resources:
          requests:
            cpu: "250m"
            memory: "256Mi"  
          limits:
            cpu: "500m"
            memory: "512Mi"
      volumes:
      - name: db-storage
        persistentVolumeClaim:
          claimName: jerney-db-pvc

---
apiVersion: v1
kind: Service
metadata:
  name: jerney-db
  namespace: jerney
  labels:
    app.kubernetes.io/name: jerney-db
    app.kubernetes.io/part-of: jerney
    app.kubernetes.io/component: database
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: jerney-db
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432

---
# ---- NetworkPolicy: DB only accepts traffic from Backend ----
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: jerney-db-allow-backend-only
  namespace: jerney
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: jerney-db
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app.kubernetes.io/name: jerney-backend
    ports:
    - protocol: TCP
      port: 5432
